# velum-sail

./: README.md  pyproject.toml
examples/: parser.py  prefix.py  string_parser.py  turbofish.py
examples/plugins/: __main__.py  test_plugin.py
sail/: __init__.py  errors.py
sail/impl/: argument_parser.py  command.py  command_manager.py  param_info.py  plugin.py  signature_parser.py
sail/internal/: __init__.py  debug.py  empty.py  parser.py  typing_utils.py  undefined.py
sail/traits/: argument_parser_trait.py  command_manager_trait.py  command_trait.py  plugin_trait.py  signature_parser_trait.py
