[tool.poetry]
name = "sail"
version = "0.1.0"
description = ""
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"
velum = {git = "https://github.com/chromosomologist/velum"}

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.280"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
slotscheck = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
skip_glob = "**/__init__.pyi"

[tool.pyright]
include = ["sail", "examples"]
exclude = ["**/__init__.py"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.black]
line-length = 100
target-version = ["py310"]
