[tool.poetry]
name = "sail"
version = "0.1.0"
description = ""
authors = ["Chromosomologist <chromosomologist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"
velum = {git = "https://github.com/eludirs-community/velum"}

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.280"
isort = "^5.10.1"
black = "^22.10.0"
slotscheck = "^0.16.1"
ruff = "^0.0.169"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
skip_glob = "**/__init__.pyi"

[tool.pyright]
include = ["sail", "examples"]
exclude = ["**/__init__.py"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
exclude-classes = """
(
    ^velum\\.internal\\.typing_patches:WSMessage$
    |^velum\\.internal\\.data_binding:(_JSONLoader|_JSONDumper)$
)
"""

[tool.ruff]
line-length = 105

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
